bit of cleanup